--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
       <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css">
       <script type="module" src="https://pyscript.net/releases/2024.1.1/core.js"></script>
   </head>
-  <body>
-
-    <!-- TODO: Fill in our custom application code here... -->
-
-  </body>
+<body>
+  <h1>Polyglot 🦜 💬 🇬🇧 ➡️ 🏴‍☠️</h1>
+  <p>Translate English into Pirate speak...</p>
+  <input type="text" name="english" id="english" placeholder="Type English here..." />
+  <button py-click="translate_english">Translate</button>
+  <div id="output"></div>
+  <script type="py" src="./main.py" config="./pyscript.json"></script>
+</body>
 </html>
