--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Polyglot 🦜 💬 🇬🇧 ➡️ 🏴‍☠️</h1>
   <p>Translate English into UTP...</p>
   <input type="text" name="english" id="english" placeholder="Type English here..." />
-  <button py-click="translate_english">Translate</button>
+  <button py-click="UTP">Translate</button>
   <div id="output"></div>
   <script type="py" src="./main.py" config="./pyscript.json"></script>
 </body>
