--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <h1>Polyglot 🦜 💬 🇬🇧 ➡️ 🏴‍☠️</h1>
-  <p>Translate English into UTP...</p>
+  <p>Translate English into UTS...</p>
   <input type="text" name="english" id="english" placeholder="Type English here..." />
   <button py-click="encode_text">Translate</button>
   <div id="output"></div>
