--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <input type="text" name="english" id="english" placeholder="Type English here..." />
   <button py-click="encode_text">Translate</button>
   <div id="output"></div>
-  <script type="py" src="./main.py" config="./pyscript.json"></script>
-  <script type="py" src="./secondary.py" worker></script>
+  <script type="py" src="./main.py" config="./pyscript.json" worker></script>
 </body>
 </html>
